# tinycplus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: ast.cpp  ast.h  astparenter.h  contexts.h  main.cpp  parser.cpp  parser.h  shared.h  tinyc_to_cpp_converter.h  transpiler.cpp  transpiler.h  typechecker.cpp  typechecker.h  types.h
